# notes-etc

./: README.md  cliday.md
builds/: k8s-server.md
notes/: ansible.md  apps.md  cmdline.md  color_schemes.md  containers.md  firefox.md  gcloud.md  git.md  google_cloud.md  handbrake.md  istio.md  jenkins.md  k8s.md  linux.md  macOS.md  media.md  networking.md  nextcloud.md  plex.md  python.md  security.md  shell.md  solutions.md  ssh.md  synology.md  terminal.md  text_and_files.md  tmux.md  vim.md  zsh.md
projects/: cliday.md  docker-server.md
scripts/Ansible/: bootstrap.yml
scripts/Bash/: animations.bash  collapse_pwd.bash  find_between_dates.bash  ghpr
scripts/Python/: braches  f5bot.py  infrastaller.py  vaultenv.py
scripts/Python/bit/: bit.py  pyproject.toml
scripts/Python/mp3z/: mp3z.py  requirements.txt  tagger.py
snippets/: ansible.md  docker.md  gcloud.md  groovy.md  kubectl.md  linux.md  python.md  shell.md  vim.md  zsh_prompt.md  zsh_ps1.md
