[project]
name = "bit"
version = "0.1.0"
description = "A modern CLI for managing Git worktrees with GitHub and tmux integration"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.8"
dependencies = [
  "GitPython>=3.1",
  "libtmux>=0.38.1",
  "logzero>=1.7.0",
  "PyGithub>=1.59",
  "questionary>=2.0",
  "rich>=14.0.0",
]

[project.scripts]
bit = "bit:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
